improved contact page + fixed login route

--- a/templates/main/contact/index.html.twig
+++ b/templates/main/contact/index.html.twig
@@ -58,6 +58,8 @@
                 {{ form_errors(form.content) }}
             </div>
         </div>
+    </div>
+    <div class="contact__submit">
         <button type="submit" class="button--dark-green">Envoyer</button>
     </div>
 
