--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1020,7 +1020,7 @@ body {
 }
 
 .badge--pending {
-  background-color: #ffc107;
+  background-color: #edc54c;
   color: white;
   padding: 5px 10px;
   border-radius: 20px;
@@ -1041,7 +1041,7 @@ body {
 }
 
 .btn--validate {
-  background-color: #28a745;
+  background-color: #2b4743;
   color: white;
   padding: 5px 10px;
   text-decoration: none;
@@ -1049,7 +1049,7 @@ body {
 }
 
 .btn--refuse {
-  background-color: #dc3545;
+  background-color: #ea638c;
   color: white;
   padding: 5px 10px;
   text-decoration: none;
