--- a/sass/admin/_dashboard.sass
+++ b/sass/admin/_dashboard.sass
@@ -58,7 +58,7 @@
       color: var.$dark-green
 
 .badge--pending
-  background-color: #ffc107  // Jaune
+  background-color: #edc54c  // Jaune
   color: white
   padding: 5px 10px
   border-radius: 20px
@@ -76,14 +76,14 @@
   border-radius: 20px
 
 .btn--validate
-  background-color: #28a745
+  background-color: var.$dark-green
   color: white
   padding: 5px 10px
   text-decoration: none
   border-radius: 5px
 
 .btn--refuse
-  background-color: #dc3545
+  background-color: var.$pink
   color: white
   padding: 5px 10px
   text-decoration: none
