--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -1,10 +1,17 @@
 @use "../abstracts/variables" as var
 @use "../abstracts/mixins" as mixin
     
+.button-wrapper
+    text-align: center
+
+
 .button
     background-color: transparent
     border: solid 2px var.$white
     color: var.$white
+    font-family: var.$font-family
+    font-weight: 600
+    font-size: var.$font-size-p
     border-radius: 0.5rem
     margin-top: 0.5rem
     padding: 0.5rem 0.75rem
