--- a/sass/components/_form.sass
+++ b/sass/components/_form.sass
@@ -12,6 +12,9 @@
   flex-direction: column
   gap: 1.5rem
 
+  h1
+    font-size: var.$font-size-h1
+
   label
     font-weight: 600
     color: var.$dark-green
