--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form method="post">
+    <form class="form" method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -14,7 +14,7 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1>Connexion</h1>
         <div>
             <label for="username">Username</label>
             <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
@@ -27,12 +27,14 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
-            <input type="checkbox" name="_remember_me" id="_remember_me">
-            <label for="_remember_me">Remember me</label>
+            <input type="checkbox" name="my_checkbox" id="my_checkbox">
+            <label for="my_checkbox">Se souvenir de moi</label>
         </div>
 
-        <button class="button--dark-green" type="submit">
-            Je me connecte
-        </button>
+        <div class="button-wrapper">
+            <button class="button--dark-green" type="submit">
+                Je me connecte
+            </button>
+        </div>
     </form>
 {% endblock %}
