--- a/templates/admin/tag/edit.html.twig
+++ b/templates/admin/tag/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-<div class="tag-form">
+<div class="form">
   <h1 class="tag-form__title">{{ title }}</h1>
 
   {{ form_start(form, {'attr': {'class': 'tag-form__form'}}) }}
@@ -12,10 +12,15 @@
       {{ form_widget(form.name, {'attr': {'class': 'tag-form__input'}}) }}
       {{ form_errors(form.name) }}
     </div>
+    <div class="tag-form__group">
+      {{ form_label(form.slug, null, {'label_attr': {'class': 'tag-form__label'}}) }}
+      {{ form_widget(form.slug, {'attr': {'class': 'tag-form__input'}}) }}
+      {{ form_errors(form.slug) }}
+    </div>
 
     <div class="tag-form__actions">
-      <button type="submit" class="tag-form__button tag-form__button--submit">Enregistrer</button>
-      <a href="{{ path('admin.tags.index') }}" class="tag-form__button tag-form__button--back">Retour</a>
+      <button type="submit" class="button--dark-green">Enregistrer</button>
+      <a href="{{ path('admin.tags.index') }}" class="button--light-green">Retour</a>
     </div>
   {{ form_end(form) }}
 </div>
