--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1067,7 +1067,7 @@ body {
   text-align: center;
 }
 
-.button, .table tbody tr:nth-child(even) td .button, .button--delete, .button--dark-green, .button--light-green {
+.button, .button--delete, .button--dark-green, .button--light-green {
   background-color: transparent;
   border: solid 2px #efe4d5;
   color: #efe4d5;
@@ -1083,7 +1083,7 @@ body {
        column-gap: 0.5rem;
   cursor: pointer;
 }
-.button:hover, .table tbody tr:nth-child(even) td .button:hover, .button--delete:hover, .button--dark-green:hover, .button--light-green:hover {
+.button:hover, .button--delete:hover, .button--dark-green:hover, .button--light-green:hover {
   border: solid 2px #38d6c2;
   color: #38d6c2;
 }
@@ -1124,52 +1124,59 @@ body {
   border: solid 2px #ea638c;
 }
 
-.table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 30px;
-  color: #efe4d5;
-  border: solid 2px #2b4743;
-  background-color: #2b4743;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px #d5d5d5;
-}
-.table thead {
-  background-color: #efe4d5;
-  color: #2b4743;
-}
-.table tbody tr:nth-child(even) {
-  background-color: #efe4d5;
-  color: #2b4743;
-}
-.table tbody tr td {
-  padding: 12px 15px;
-  align-content: center;
-}
-.table tbody tr:nth-child(even) td .button {
-  border: solid 2px #2b4743;
-  color: #2b4743;
-  background-color: transparent;
-}
-.table tbody tr:nth-child(even) td .button:hover {
-  background-color: #38d6c2;
-  color: #2b4743;
-}
-.table tbody tr:nth-child(odd) td .button {
-  background-color: #2b4743;
-  color: #efe4d5;
-}
-.table tbody tr:nth-child(odd) td .button:hover {
-  background-color: #38d6c2;
-  color: #2b4743;
-}
-.table .d-flex {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
+h1 {
+  font-size: 2.5rem;
 }
 
+.table-wrapper {
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+  min-width: 600px;
+  border-collapse: collapse;
+  margin-top: 2rem;
+  border: 1px solid #ccc;
+}
+.table th, .table td {
+  padding: 1rem;
+  text-align: center;
+}
+.table th {
+  background: #2b4743;
+  color: #efe4d5;
+}
+.table tr:nth-of-type(2n) {
+  background: #ebddca;
+}
+
+@media (max-width: 650px) {
+  th {
+    display: none;
+  }
+  tr {
+    border-bottom: 1px solid #ccc;
+    display: block;
+  }
+  td {
+    display: block;
+    gap: 1rem;
+    display: flex;
+    align-content: left;
+    align-items: center;
+  }
+  td:first-child {
+    padding-top: 1rem;
+  }
+  td:last-child {
+    padding-bottom: 1rem;
+  }
+  td::before {
+    content: attr(data-cell) " : ";
+    font-weight: 700;
+  }
+}
 .form {
   max-width: 400px;
   margin: 3rem auto;
