improved comments badges

--- a/sass/admin/_dashboard.sass
+++ b/sass/admin/_dashboard.sass
@@ -53,41 +53,11 @@
     color: var.$white
 
   tr:hover
-    background-color: var.$light-green
+    background-color: darken(var.$white, 3)
     a
       color: var.$dark-green
 
-.badge--pending
-  background-color: #edc54c  // Jaune
-  color: white
-  padding: 5px 10px
-  border-radius: 20px
 
-.badge--validated
-  background-color: var.$light-green
-  color: white
-  padding: 5px 10px
-  border-radius: 20px
-
-.badge--refused
-  background-color: var.$pink
-  color: white
-  padding: 5px 10px
-  border-radius: 20px
-
-.btn--validate
-  background-color: var.$dark-green
-  color: white
-  padding: 5px 10px
-  text-decoration: none
-  border-radius: 5px
-
-.btn--refuse
-  background-color: var.$pink
-  color: white
-  padding: 5px 10px
-  text-decoration: none
-  border-radius: 5px
 
 
 /* Desktop : côte à côte */
