--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -59,3 +59,22 @@
             color: var.$pink
             background-color: transparent
             border: solid 2px var.$pink
+
+
+// BADGES POUR LES COMMENTAIRES
+.badge
+    font-family: var.$font-family
+    font-weight: 600
+    font-size: var.$font-size-p
+    color: white
+    padding: 5px 10px
+    &--pending
+        @extend .badge
+        white-space: nowrap 
+        background-color: #edc54c
+    &--validated
+        @extend .badge
+        background-color: var.$light-green
+    &--delete
+        @extend .badge
+        background-color: var.$pink
