--- a/sass/main/_article.sass
+++ b/sass/main/_article.sass
@@ -86,6 +86,9 @@
         h4
             font-size: var.$font-size-h4
 
+        .disclaimer
+            margin-top: 1rem
+
         .comment__form
             margin-top: 1rem
 
