--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -745,6 +745,9 @@
 .article__page .comment__section h4 {
   font-size: 1.4rem;
 }
+.article__page .comment__section .disclaimer {
+  margin-top: 1rem;
+}
 .article__page .comment__section .comment__form {
   margin-top: 1rem;
 }
